--- a/tutorials.html
+++ b/tutorials.html
@@ -30,6 +30,38 @@
        </ul>  
     </nav>
 
+    <section>
+      <fieldset> 
+          <legend>Learn HTML5</legend>
+        <div class="firstone">       
+             
+            <div class="oneone"></div>
+            <div class="onetwo"></div>
+            <div class="onethree"></div>           
+        </div>
+     </fieldset>  
+
+
+     <fieldset> 
+            <legend>Learn CSS3</legend>
+        <div class="firsttwo">
+                <div class="twoone"></div>
+                <div class="twotwo"></div>
+                <div class="twothree"></div>
+        </div>
+    </fieldset>
+
+    <fieldset> 
+            <legend>Learn Javescript</legend>
+        <div class="firstthird">
+                <div class="threeone"></div>
+                <div class="threetwo"></div>
+                <div class="threethree"></div>
+        </div>
+    </fieldset>
+
+    </section>
+
      <footer><!--creates a footer section in a webpage-->
         <div class="footer-title">Here we are</div>
         <div class="company-info">
