--- a/glossary.html
+++ b/glossary.html
@@ -3,7 +3,6 @@
 <head>
     <title>
         Today's news
-
     </title>
     <meta charset="utf-8">
     <meta name ="viewport"  content="width=device-width, intial-scale=1.0">
@@ -85,9 +84,9 @@
           </div>    
         <div class="video"></div> 
         
-    </section>
+    </section><hr>
 
-    <div class="secondtitle">Web development terms</div>
+    <div class="secondtitle">Web development terms</div><hr>
 
     <div class="twocontainer">       
         <div class="number1"><h1><a href="#">42 Web Development Terms Everyone Should Know</a></h1></div>
