--- a/jobs.html
+++ b/jobs.html
@@ -79,16 +79,16 @@
             <fieldset>
                 <legend>Apply For Job</legend>
             <label for="fname"> First Name : </label>
-            <input type="text" name="firstname" placehlider="Firstname">
+            <input type="text" name="firstname" placeholder="Firstname">
             <label for="fname"> Last Name :</label>    
-            <input type="text" name="lastname" placehlider="Lastname">
+            <input type="text" name="lastname" placeholder="Lastname">
             <label for="fname"> Address :</label>
-            <input type="text" name="adress" placehlider="Adress"><br><br>
+            <input type="text" name="adress" placeholder="Adress"><br><br>
             <label for="fname">Currently Employed :</label>
             <input type="radio" name="Yes" value="Yes">Yes
             <input type="radio" name="No" value="No" checked>No<br><br>
             <label for="fname">E-mail :</label>
-            <input type="email" name="email" placehlider="Email">
+            <input type="email" name="email" placeholder="Email">
             <label for="fname">Qualification :</label>
             <select name="education">
                 <option value="Bachleor">Bachleor</option>
