--- a/reviews.html
+++ b/reviews.html
@@ -35,7 +35,11 @@
     <section>
         
         <div class="right">
-            <img src="w3.png" alt="logo of w3school site"><br>
+            <div class ="imagecontainer">
+                <div class ="imagehere"></div>
+            </div><br><br>
+
+            <!-- <img src="w3.png" alt="logo of w3school site"><br> -->
             <div class="title" alt="title of the logo">
                 W3School.com
             </div><br>
@@ -63,9 +67,12 @@ By using our online editor, Try it Yourself, you can edit examples and execute c
             </div>
         </div><hr>
         <div class="left">
-            <img src="stack.png" alt="logo">
+                <div class ="imagecontainer1">
+                        <div class ="imagehere1"></div>
+                </div><br><br>
+            
             <div class="title">Stackoverflow.com</div><br>
-            <div class="content">Stack Overflow is a question and answer site for professional and enthusiast programmers. It is a privately held website, the flagship site of the Stack Exchange Network,created in 2008 by Jeff Atwood and Joel Spolsky. It features questions and answers on a wide range of topics in computer programming.It was created to be a more open alternative to earlier question and answer sites such as Experts-Exchange. The name for the website was chosen by voting in April 2008 by readers of Coding Horror, Atwood's popular programming blog.
+            <div class="content">Stack Overflow is a question and answer site for professional and enthusiast programmers. It is a privately held website, the flagship site of the Stack Exchange Network,created in 2008 by Jeff Atwood and Joel Spolsky.It was created to be a more open alternative to earlier question and answer sites such as Experts-Exchange. The name for the website was chosen by voting in April 2008 by readers of Coding Horror, Atwood's popular programming blog.
 
 The website serves as a platform for users to ask and answer questions, and, through membership and active participation, to vote questions and answers up or down and edit questions and answers in a fashion similar to a wiki or Digg. Users of Stack Overflow can earn reputation points and "badges"; for example, a person is awarded 10 reputation points for receiving an "up" vote on an answer given to a question and 5 points for the "up" vote of a question, and can receive badges for their valued contributions,which represents a kind of gamification of the traditional Q&A site.
 		</div><br>
