--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                           
     </section>
 
+    <div class="firsttitle">Quick read</div>
+
     <div class ="second-coloumn">
         <div class="topic">Millions using 123456 as password, security study finds</div>
         <div class="content"> The analysis by the UK's National Cyber Security Centre (NCSC) found 123456 was the most widely-used password on breached accounts.
@@ -86,7 +88,7 @@
         </div>    
     </div>
    
-    
+    <div class="secondtitle">News form elsewhere</div>
 
     <div class="small-small">
       <div class="small-news">
