--- a/tutorials.html
+++ b/tutorials.html
@@ -32,31 +32,107 @@
 
     <section>
       <fieldset> 
-          <legend>Learn HTML5</legend>
-        <div class="firstone">       
+          <legend>Must See</legend>
+        <div class="firstone">                          
+                <div class="oneone">
+                        <div class="apple">
+                            <div class="ball"></div>
+                        </div>
+                        <div class="cat"><a href="#">  The night the US bombed a Chinese embassy</a>   
+                            <p>It was close to midnight and Vlada, a Serbian engineer,
+                                 was speeding towards his apartment in Belgrade.
+                                  He had taken his 20-year-old son out that evening but bombs
+                                  ad started to fall across the Yugoslav capital. 
+                                The power grid was down and he wanted to get home.</p>
+                        </div>
+                </div>          
+                <div class="onetwo">
+                        <div class="apple1">
+                            <div class="ball1"></div>
+                        </div>
+                        <div class="cat1"><a href="#">  India election 2019: How sugar influences the world's biggest vote</a>   
+                            <p>When Prime Minister Narendra Modi held a recent election meeting
+                                 in the northern Indian state of Uttar Pradesh,
+                                 he was compelled to make a promise relating to sugar, a diet staple.</p>
+                        </div>
+                </div>
+                <div class="onethree">
+                        <div class="apple2">
+                            <div class="ball2"></div>
+                        </div>
+                        <div class="cat2"><a href="#">  German pigeon flashed by speed camera goes viral
+                            </a>   
+                             <p>It was a quiet afternoon in Bocholt in western Germany when a pigeon broke
+                                  the calm and the speed limit,
+                                  flying down a residential street at 45km/h (28mph) in a 30km/h zone.</p>
+                        </div>
+                </div>           
+        </div> 
              
-            <div class="oneone"></div>
-            <div class="onetwo"></div>
-            <div class="onethree"></div>           
-        </div>
-     </fieldset>  
-
+      </fieldset>        
+       
 
      <fieldset> 
-            <legend>Learn CSS3</legend>
+            <legend>Trending</legend>
         <div class="firsttwo">
-                <div class="twoone"></div>
-                <div class="twotwo"></div>
-                <div class="twothree"></div>
+                <div class="twoone">
+                        <div class="apple3">
+                                <div class="ball3"></div>
+                            </div>
+                            <div class="cat3"><a href="#"> Viewpoint: Thai coronation heralds an unpredictable reign</a>   
+                                <p>After the 70-year reign of a revered and widely-loved king, Thailand's
+                                     transition to the new era of his son, Maha Vajiralongkorn,
+                                     was always going to be an uneasy one, an analyst reports from London.</p>
+                        </div>                                        
+                </div>
+                <div class="twotwo">
+                        <div class="apple4">
+                                <div class="ball4"></div>
+                            </div>
+                            <div class="cat4"><a href="#">  A really simple guide to the European elections</a>   
+                                <p>Voters across the EU go to the polls on 23-26 May to elect more than
+                                     700 MEPs - members of the European Parliament.</p>
+                        </div>
+                </div>
+                <div class="twothree">
+                        <div class="apple5">
+                                <div class="ball5"></div>
+                            </div>
+                            <div class="cat5"><a href="#"> The retail revolution: How mail order changed middle-class life</a>   
+                                <p>"Beware! Don't patronize Montgomery Ward & Co. They are deadbeats!"</p>
+                        </div>
+                </div>
         </div>
     </fieldset>
 
     <fieldset> 
-            <legend>Learn Javescript</legend>
+            <legend>Long Reads</legend>
         <div class="firstthird">
-                <div class="threeone"></div>
-                <div class="threetwo"></div>
-                <div class="threethree"></div>
+                <div class="threeone">
+                        <div class="apple6">
+                                <div class="ball6"></div>
+                            </div>
+                            <div class="cat6"><a href="#"> Missing part of Stonehenge returned 60 years on</a>   
+                                <p>A missing piece of Stonehenge has been returned to the site 60 years after it was taken.</p>
+                        </div>
+                </div>
+                <div class="threetwo">
+                        <div class="apple7">
+                                <div class="ball7"></div>
+                            </div>
+                            <div class="cat7"><a href="#">  Hungary fails to deport families to Afghanistan</a>   
+                                <p>Hungary tried and failed to deport three Afghan families to Afghanistan on Tuesday, 
+                                    in a move that rights groups say is a breach of international law.</p>
+                        </div>
+                </div>
+                <div class="threethree">
+                        <div class="apple8">
+                                <div class="ball8"></div>
+                            </div>
+                            <div class="cat8"><a href="#">  Battle for the fate of the Iran nuclear deal begins</a>   
+                                <p>The real battle for the fate of the Iran nuclear deal has begun.</p>
+                        </div>
+                </div>
         </div>
     </fieldset>
 
