--- a/reviews.html
+++ b/reviews.html
@@ -9,8 +9,7 @@
     <link href = "reviewdesign.css" rel="stylesheet"> <!--used for linking the style page-->
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet"><!--used for bringing the font from the google font page-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Raleway" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
 </head>
@@ -40,7 +39,7 @@
             </div><br><br>
 
             <!-- <img src="w3.png" alt="logo of w3school site"><br> -->
-            <div class="title" alt="title of the logo">
+            <div class="title">
                 W3School.com
             </div><br>
             <div class="content">
